--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <div><a href="" class="link"><input type="button" value="Book Now" class="button" onsubmit="return BookNow()"/></a></div>
         </div>
     </nav>
-    <div class="wel"><img src="homepage image1.jpg" width="100%" class="img">WELCOME</div>
-    <div class="place">Places To Vist</div>
+    <div class="img"><img src="homepage image1.jpg" width="100%">
+    <div class="color"><div class="marquee">
+        <span>Travel around the World</span></div></div></div>
+    <div id="placesToVisit" class="place">Places To Vist</div>
     <div class="places">
         <img src="kanyakumari-beach.jpg" width="700px" height="600px" class="img">
         <img src="Ooty.webp" width="720px" height="600px" class="img">
@@ -31,6 +33,22 @@
         <div>KANNIYAKUMARI</div>
         <div>OOTY</div>
     </div>
+    <div class="places">
+        <div> <img src="Thiruvannamalai.jpg" width="700px" height="600px" class="image"></div>
+     <div><img src="Kerala-Tourism.webp" width="720px" height="600px" class="image"></div>
+     </div>
+     <div class="placename">
+         <div>THIRUVANNAMALAI</div>
+         <div>KERALA</div>
+     </div>
+     <div class="places">
+        <div> <img src="madurai.webp" width="700px" height="600px" class="image"></div>
+     <div><img src="Thanjavur.webp" width="720px" height="600px" class="image"></div>
+     </div>
+     <div class="placename">
+         <div>MADURAI</div>
+         <div>THANJAVUR</div>
+     </div>
     <div class="black"><div class="tour"><b style="font-size: 25px;">TOURIST WEBSITE<br></b></br>Explore Your Travel.
 
     </div>
